<resources>
    <string name="app_name">OMH Maps demo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="open_map">Open Map</string>
    <string name="drop_pin">Drop pin</string>
    <string name="button_to_share_location">Button to share location</string>
    <string name="example_coordinate">Lat: 16.6612333 \nLng: 66.11323123</string>
    <string name="share_location">Share Location</string>
    <string name="center_message">Centering location</string>
    <string name="share_link">"Share link"</string>
    <string name="latitude_longitude_text">Lat: %1$s \nLng: %2$s</string>
    <string name="initial_fragment_text">Initial Fragment</string>
    <string name="map_fragment_text">Map Fragment</string>
    <string name="no_internet_connection">"No internet connection"</string>
    <string name="lost_internet_connection">"Lost internet connection"</string>
    <string name="move_message">"For more accuracy move to an open space"</string>
</resources>
