<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".maps.MapFragment">

    <fragment
        android:id="@+id/fragment_map_container"
        android:name="com.omh.android.maps.api.presentation.fragments.OmhMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout_bottom_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_omh_map" />

    <ImageView
        android:id="@+id/marker_shadow_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_map_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/marker_shadow" />

    <ImageView
        android:id="@+id/marker_image_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/map_marker_height"
        android:adjustViewBounds="true"
        android:contentDescription="@string/drop_pin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/marker_shadow_image_view"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_map_marker" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_bottom_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_16"
            android:layout_marginEnd="@dimen/normal_16"
            app:layout_constraintBottom_toBottomOf="@+id/fab_share_location"
            app:layout_constraintEnd_toStartOf="@+id/fab_share_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fab_share_location"
            tools:text="@string/example_coordinate" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_share_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_8"
            android:layout_marginEnd="@dimen/normal_8"
            android:layout_marginBottom="@dimen/normal_8"
            android:contentDescription="@string/button_to_share_location"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>